frontend/src/components/career-path/level-description/level-description.scss
@import '~assets/scss/utils';

.level-description {
  min-width: 450px;
  max-width: 525px;
}

.level-description__title {
  border-radius: 10px 10px 0 0;
  padding: 25px 35px;
}

.level-description__subtitle {
  color: #808c9c;
}

.level-description__content {
  padding: 25px 35px;
  height: calc(100vh - 230px);
}

::-webkit-scrollbar {
  width: 5px;
  height: 5px;
}

@media (max-width: 1500px) {
  .level-description {
    max-width: inherit;
    margin: 10px 0;
    height: 100%;
  }

  .level-description__content {
    height: 100%;
  }
}

